skinny orm にきりかえてみた

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -350,14 +350,16 @@ db {
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
-  default.driver = "slick.driver.MySQLDriver$"
-  default.driver = "com.mysql.jdbc.Driver"
-  default.url = "jdbc:mysql://localhost/test"
-  default.username = "root"
-  default.password = "kani"
 }
-slick.dbs.default.driver="slick.driver.MySQLDriver$"
-slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
-slick.dbs.default.db.url="jdbc:mysql://localhost/test"
-slick.dbs.default.db.user="root"
-slick.dbs.default.db.password="kani"
+db.default.driver = "slick.driver.MySQLDriver$"
+db.default.driver = "com.mysql.jdbc.Driver"
+db.default.url = "jdbc:mysql://localhost/test"
+db.default.username = "root"
+db.default.password = "kani"
+db.default.poolInitialSize=10
+db.default.poolMaxSize=100
+db.default.poolValidationQuery="select 1"
+
+play.modules.enabled += "modules.DBInitializerModule"
+# scalikejdbc.PlayModule doesn't depend on Play's DBModule
+play.modules.disabled += "play.api.db.DBModule"
